--- a/HTML/HandsOn/HTML/login.htm
+++ b/HTML/HandsOn/HTML/login.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <form action="http://www.google.co.in" target="_blank">
-                <fieldset style="width:300px;background-color:orange">
+                <fieldset style="width:300px;background-color:white">
                         <legend>login here...</legend>
                         <table border="1">
                             <tr>
