--- a/HTML/HandsOn/HTML/headers.htm
+++ b/HTML/HandsOn/HTML/headers.htm
@@ -11,7 +11,7 @@
        <h4>Heading 4</h4>
        <h5>Heading 5</h5>
        <h6>Heading 6</h6>
-       <h3>What is CSS??</h3>
+       <h3>What is CSS??<span>Css stands for Cascading Style Sheet.</span></h3>
        <span>Css stands for Cascading Style Sheet.</span>
     </body>
 </html>
